Window input refactor

--- a/ArgEngine.vcxproj.filters
+++ b/ArgEngine.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Source\Input\GamepadState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Input\WindowInput.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Application.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Input\GamepadAxes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Input\WindowInput.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
