--- a/ArgEngine.vcxproj
+++ b/ArgEngine.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="Source\Input\GamepadState.cpp" />
     <ClCompile Include="Source\Input\KeyboardState.cpp" />
     <ClCompile Include="Source\Input\MouseState.cpp" />
+    <ClCompile Include="Source\Input\WindowInput.cpp" />
     <ClCompile Include="Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +113,7 @@
     <ClInclude Include="Source\Arg\Math.h" />
     <ClInclude Include="Source\Input\MouseButtons.h" />
     <ClInclude Include="Source\Input\MouseState.h" />
+    <ClInclude Include="Source\Input\WindowInput.h" />
     <ClInclude Include="Source\Math\MathTypes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
