--- a/ArgEngine.vcxproj
+++ b/ArgEngine.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="Source\Arg\Core.h" />
     <ClInclude Include="Source\Arg\Debug.h" />
     <ClInclude Include="Source\Arg\Input.h" />
+    <ClInclude Include="Source\Arg\Memory.h" />
     <ClInclude Include="Source\Core\Application.h" />
     <ClInclude Include="Source\Debug\CoreLogger.h" />
     <ClInclude Include="Source\Input\CursorModes.h" />
@@ -117,6 +118,7 @@
     <ClInclude Include="Source\Input\MouseState.h" />
     <ClInclude Include="Source\Input\WindowInput.h" />
     <ClInclude Include="Source\Math\MathTypes.h" />
+    <ClInclude Include="Source\Memory\Memory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
