--- a/ArgEngine.vcxproj
+++ b/ArgEngine.vcxproj
@@ -101,6 +101,8 @@
     <ClCompile Include="Source\Core\Application.cpp" />
     <ClCompile Include="Source\Core\Window.cpp" />
     <ClCompile Include="Source\Editor\EditorWindow.cpp" />
+    <ClCompile Include="Source\Gameplay\Scene\Components\Transform.cpp" />
+    <ClCompile Include="Source\Gameplay\Scene\Scene.cpp" />
     <ClCompile Include="Source\Input\GamepadState.cpp" />
     <ClCompile Include="Source\Input\KeyboardState.cpp" />
     <ClCompile Include="Source\Input\MouseState.cpp" />
@@ -124,15 +126,19 @@
     <ClInclude Include="Libraries\Include\imgui\imstb_truetype.h" />
     <ClInclude Include="Source\Arg\Core.h" />
     <ClInclude Include="Source\Arg\Debug.h" />
+    <ClInclude Include="Source\Arg\Gameplay.h" />
     <ClInclude Include="Source\Arg\Input.h" />
     <ClInclude Include="Source\Arg\Memory.h" />
     <ClInclude Include="Source\Arg\Random.h" />
     <ClInclude Include="Source\Arg\Renderer.h" />
+    <ClInclude Include="Source\Arg\Time.h" />
     <ClInclude Include="Source\Core\Application.h" />
     <ClInclude Include="Source\Debug\CoreLogger.h" />
     <ClInclude Include="Source\Editor\EditorWindow.h" />
-    <ClInclude Include="Source\Gameplay\Components\Transform.h" />
-    <ClInclude Include="Source\Gameplay\GameObject.h" />
+    <ClInclude Include="Source\Editor\Scene\SceneHierarchyWidget.h" />
+    <ClInclude Include="Source\Gameplay\Scene\Components\Transform.h" />
+    <ClInclude Include="Source\Gameplay\Scene\GameObject.h" />
+    <ClInclude Include="Source\Gameplay\Scene\Scene.h" />
     <ClInclude Include="Source\Input\CursorModes.h" />
     <ClInclude Include="Source\Input\GamepadAxes.h" />
     <ClInclude Include="Source\Input\GamepadButtons.h" />
@@ -152,6 +158,7 @@
     <ClInclude Include="Source\Renderer\GraphicsContext.h" />
     <ClInclude Include="Source\Renderer\RenderAPI.h" />
     <ClInclude Include="Source\Renderer\Renderer.h" />
+    <ClInclude Include="Source\Time\GameTime.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
